# workboard

./: .gitignore  AGENTS.md  Dockerfile  Makefile  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  podman-rootless
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
workboard/: _3d.gltf  _3d.stl  linspace_rational.py  translatesvgpath2.py  workboard01.py  workboard01_2d.gltf  workboard01_2d.step  workboard01_2d.stl  workboard01_2d.txt.stl  workboard01__part__feet.step  workboard01__part__feet.stl  workboard01__part__feet_magnetic_discs.step  workboard01__part__feet_magnetic_discs.stl  workboard01__part__workboard.gltf  workboard01__part__workboard.txt.stl  workboard01__part__workboard_magnetic_discs.gltf
workboard/projects/easel/: easel01.py  test_board1_center.py  test_easel.py
workboard/projects/pizzapancoolingmat/: README.md  __defaults.py  main.py  pizzapancoolingmat.py  schemas.py  test_main.py
workboard/projects/umbrellastandstopper/: umbrellastandstopper01.py
workboard/projects/workboard/: _3d.step  workboard01.md  workboard01_3d.gltf  workboard01_3d.step  workboard01_3d.txt.stl  workboard01__assembly__workboard_assembly.gltf  workboard01__assembly__workboard_assembly.step  workboard01__assembly__workboard_assembly.stl  workboard01__part__feet.gltf  workboard01__part__feet.txt.stl  workboard01__part__feet_magnetic_discs.gltf  workboard01__part__feet_magnetic_discs.txt.stl  workboard01__part__workboard.step  workboard01__part__workboard.stl  (+3 more)
(+2 files in other folders)
